@@ -1,2 +1,4 @@
+	.fnstart
 	sfmfd   f4, 1, [sp]!
 	.save f4, 1
+	.fnend
