@@ -1,3 +1,7 @@
+2009-07-01  Paul Brook <paul@codesourcery.com>
+
+	* gas/arm/fp-save.s: Add .fnstart and .fnend directives.
+
 2009-06-30  Nick Clifton  <nickc@redhat.com>
 
 	PR 10288
